# desktop-app

./: eslint.config.js  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.cjs  vite.config.ts
src/: App.vue  env.d.ts  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs
src-tauri/src/database/: connection.rs  mod.rs
src-tauri/src/models/: keys.rs  mod.rs  user.rs  websocket.rs
src/assets/: main.postcss
src/components/: Title.vue
src/components/Button/: Primary.vue  Secondary.vue
src/pages/: Configure.vue  Connect.vue  Home.vue
