[package]
name = "turms"
version = "0.1.0"
description = "Turms desktop app."
license = "MIT"
default-run = "turms"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

tauri = { version = "1.6", features = ["api-all", "custom-protocol"] }

# Related to database.
rusqlite = { version = "0.32", features = ["bundled"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] } # encryption at rest.

# Related to telecommunication.
webrtc = "0.11"
tungstenite = { version = "0.24", features = ["rustls", "rustls-native-certs"] }
jsonwebtoken = "9.3"

# Related to cryptography.
double-ratchet = "0.1.0"
x25519-dalek = "2.0.1"
clear_on_drop = "0.2.5"
generic-array = "1"
