[package]
name = "turms"
version = "0.1.0"
description = "Turms desktop app."
license = "MIT"
default-run = "turms"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

tauri = { version = "1.6", features = ["api-all", "custom-protocol"] }

# Related to database.
rusqlite = { version = "0.32", features = ["bundled"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] } # encryption at rest.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] } # save local keys.

# Related to telecommunication.
libturms = { git = "https://github.com/TurmsApp/libturms" }

# Related to cryptography.
double-ratchet = "0.1.0"
x25519-dalek = "2.0.1"
clear_on_drop = "0.2.5"
generic-array = "1"
