[package]
name = "turms"
version = "0.1.0"
description = "Turms desktop app."
license = "MIT"
default-run = "turms"
edition = "2021"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

tauri = { version = "2.0.0-rc", features = [] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-http = "2.0.0-rc"
tauri-plugin-process = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"

# Related to database.
tauri-plugin-sql = { version = "2.0.0-rc", features = ["sqlite"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] } # encryption at rest.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] } # save local keys.

# Related to telecommunication.
libturms = { git = "https://github.com/TurmsApp/libturms" }

# Related to cryptography.
tauri-plugin-stronghold = "2.0.0-rc"
double-ratchet = "0.1.0"
x25519-dalek = "2.0.1"
clear_on_drop = "0.2.5"
generic-array = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.0-rc"
